--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@blocknote/core": "^0.9.4",
-    "@blocknote/react": "^0.9.4",
+    "@blocknote/react": "^0.9.6",
     "@clerk/clerk-react": "^4.26.3",
+    "@clerk/nextjs": "^5.7.4",
     "@edgestore/react": "^0.1.7",
     "@edgestore/server": "^0.1.7",
+    "@emotion/react": "^11.13.3",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -21,6 +23,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tiptap/react": "^2.8.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
@@ -29,6 +32,7 @@
     "lucide-react": "^0.284.0",
     "next": "14.2.15",
     "next-themes": "^0.2.1",
+    "prosemirror-view": "^1.34.3",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
