--- a/.env.local
+++ b/.env.local
@@ -5,5 +5,8 @@ NEXT_PUBLIC_CONVEX_URL=
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
 
+AUTH_DOMAIN=
+APPLICATION_ID=
+
 EDGE_STORE_ACCESS_KEY=
 EDGE_STORE_SECRET_KEY=
