revert some unnessesary change

--- a/.env.sample.local
+++ b/.env.sample.local
@@ -9,8 +9,10 @@ CONVEX_DEPLOY_KEY=
 NEXT_PUBLIC_CONVEX_URL=
 
 # Get these from Convex Dashboard > Settings > Authentication
+#
+# Somehow it doesn't read from Vercel variables
+# so you must add AUTH_DOMAIN to Convex Dashboard > Settings > Environment Variables 
 AUTH_DOMAIN=
-APPLICATION_ID=
 
 # Get these from https://clerk.com/docs/references/nodejs/overview 
 # after you've created an application on Clerk
