remove unnessesary field

--- a/.env.sample.local
+++ b/.env.sample.local
@@ -9,8 +9,8 @@ CONVEX_DEPLOY_KEY=
 NEXT_PUBLIC_CONVEX_URL=
 
 # Get these from Convex Dashboard > Settings > Authentication
+# Also add AUTH_DOMAIN to env in Convex Dashboard > Settings > Environment Variables
 AUTH_DOMAIN=
-APPLICATION_ID=
 
 # Get these from https://clerk.com/docs/references/nodejs/overview 
 # after you've created an application on Clerk
