--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@clerk/clerk-react": "^5.14.0",
     "@edgestore/react": "^0.1.7",
     "@edgestore/server": "^0.1.7",
+    "@eslint/config-array": "^0.19.0",
+    "@eslint/object-schema": "^2.1.4",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -33,7 +35,7 @@
     "convex": "^1.16.6",
     "emoji-picker-react": "^4.12.0",
     "lucide-react": "^0.284.0",
-    "next": "^15.0.2",
+    "next": "^14.2.16",
     "next-themes": "^0.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -51,7 +53,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
-    "eslint": "^8",
+    "eslint": "^8.57.1",
     "eslint-config-next": "13.5.4",
     "postcss": "^8",
     "tailwindcss": "^3",
