default to light mode, update footer, adding new env to prepare for new features

--- a/.env.sample.local
+++ b/.env.sample.local
@@ -20,3 +20,6 @@ CLERK_SECRET_KEY=
 # Get these from creating new project in Edge Store's dashboard 
 EDGE_STORE_ACCESS_KEY=
 EDGE_STORE_SECRET_KEY=
+
+# Tiptap Pro token for Pro exclusive features like AI Text Generation
+TIPTAP_PRO_TOKEN=
