--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@edgestore/server": "^0.1.7",
     "@eslint/config-array": "^0.19.0",
     "@eslint/object-schema": "^2.1.4",
+    "@liveblocks/node": "^2.10.2",
+    "@liveblocks/react": "^2.10.2",
+    "@liveblocks/yjs": "^2.10.2",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
