add OpenAI API integration and update dependencies

--- a/.env.sample.local
+++ b/.env.sample.local
@@ -21,5 +21,5 @@ CLERK_SECRET_KEY=
 EDGE_STORE_ACCESS_KEY=
 EDGE_STORE_SECRET_KEY=
 
-# Tiptap Pro token for Pro exclusive features like AI Text Generation
-TIPTAP_PRO_TOKEN=
+# OpenAI API key for AI Text Generation
+OPENAI_API_KEY=
