--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.72",
     "@blocknote/core": "^0.18.0",
     "@blocknote/mantine": "^0.18.1",
     "@blocknote/react": "^0.18.1",
@@ -29,6 +30,7 @@
     "@tiptap/react": "^2.9.1",
     "@vercel/analytics": "^1.3.2",
     "@vercel/speed-insights": "^1.0.14",
+    "ai": "^3.4.33",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
