--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cmdk": "^0.2.0",
     "convex": "^1.16.6",
     "emoji-picker-react": "^4.12.0",
+    "framer-motion": "^11.11.11",
     "lucide-react": "^0.284.0",
     "next": "^14.2.16",
     "next-themes": "^0.2.1",
