--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.9.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "build:dev": "next build && next export",
     "start": "next start",
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.72",
-    "@blocknote/core": "^0.18.0",
-    "@blocknote/mantine": "^0.18.1",
-    "@blocknote/react": "^0.18.1",
+    "@blocknote/core": "^0.19.2",
+    "@blocknote/mantine": "^0.19.2",
+    "@blocknote/react": "^0.19.2",
     "@clerk/clerk-react": "^5.14.0",
     "@edgestore/react": "^0.1.7",
     "@edgestore/server": "^0.1.7",
@@ -27,7 +27,7 @@
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-visually-hidden": "^1.1.0",
-    "@tiptap/react": "^2.9.1",
+    "@tiptap/react": "^2.10.2",
     "@vercel/analytics": "^1.3.2",
     "@vercel/speed-insights": "^1.0.14",
     "ai": "^3.4.33",
@@ -38,10 +38,10 @@
     "emoji-picker-react": "^4.12.0",
     "framer-motion": "^11.11.11",
     "lucide-react": "^0.284.0",
-    "next": "^14.2.16",
+    "next": "15.0.3",
     "next-themes": "^0.2.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-dropzone": "^14.2.3",
     "react-textarea-autosize": "^8.5.3",
     "sonner": "^1.0.3",
@@ -53,13 +53,17 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "autoprefixer": "^10",
     "eslint": "^8.57.1",
-    "eslint-config-next": "13.5.4",
+    "eslint-config-next": "15.0.3",
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
   }
 }
